Bug 157931 - Top right close button fails to close form
Summary: Top right close button fails to close form
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:24.8.0 target:24.2.5
Keywords: bibisected, bisected, regression
: 159370 161201 (view as bug list)
Depends on:
Blocks: Database-Forms
  Show dependency treegraph
 
Reported: 2023-10-26 11:26 UTC by Alex Kempshall
Modified: 2024-06-10 22:51 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
LO Base file with macro. Form wll not close. (11.91 KB, application/vnd.oasis.opendocument.database)
2023-10-26 11:26 UTC, Alex Kempshall
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Kempshall 2023-10-26 11:26:04 UTC
Created attachment 190437 [details]
LO Base file with macro. Form wll not close.

The attached LibreOffice Base file illustrates a problem that appears in 7.6.2.2 but not in 7.4.3.2. I'm using Slackware 15.0. I see the same problem in Win10.

In 7.4.3.2
Open file aik_backgroundcolor.odb enable macros if necessary
Open Form1
mouse click the button "Change form color" which invokes a macro
The color of the form changes
mouse click the top right close button
the form closes successfully

In 7.6.2.2
Open file aik_backgroundcolor.odb enable macros if necessary
Open Form1
mouse click the button "Change form color" which invokes a macro
The color of the form changes
mouse click the top right close button
the form fails to close
Comment 1 Buovjaga 2023-10-31 18:05:51 UTC
Bibisected with win64-7.6 to bde746141f9b382156a5ce79ebf82c5e32fc455b
tdf#146547 sfx2: allow read-only documents to be modified

I see the commit touches code related to Base forms.
Comment 2 Alex Kempshall 2024-02-09 14:32:23 UTC
AFter a minimum amount of thought added this line to macro



	ThisComponent.setModified(False)

my issue solved
Comment 3 Michael Stahl 2024-06-05 16:37:05 UTC
*** Bug 161201 has been marked as a duplicate of this bug. ***
Comment 4 Michael Stahl 2024-06-05 16:57:07 UTC
*** Bug 159370 has been marked as a duplicate of this bug. ***
Comment 5 Commit Notification 2024-06-06 08:16:25 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3e7478ef9706e74ac551c1f94090e163e74c7fd8

tdf#157931 sfx2: fix modified status of Base forms

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Michael Stahl 2024-06-06 11:59:40 UTC
fixed on master
Comment 7 Commit Notification 2024-06-10 22:51:08 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/d6b881627cc1f6982129862e0221da65389d83bf

tdf#157931 sfx2: fix modified status of Base forms

It will be available in 24.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.